# PanoptoDownloader

./: .env.example  .gitignore  ALL_CAMERAS_GUIDE.md  AUTHENTICATION_GUIDE.md  CONTRIBUTING.md  HOW_TO_RUN.md  LICENSE  PLATFORM_SUPPORT.md  README.md  SHARING_GUIDE.md  SIMPLE_SETUP.md  WINDOWS_SETUP.md  cleanup_duplicates.py  competitive_strategy.yaml  cookies.txt  cookies_mitsloan.txt  courses.yaml  create_distribution.sh  eecs_courses.yaml  finance_headsup.yaml  finance_management.yaml  global_strategy.yaml  hands_on_deep_learning.yaml  marketing_management.yaml  menard_courses.yaml  new_courses.yaml  operations_management.yaml  organizational_processes.yaml  organizations_lab.yaml  pyproject.toml  refresh_courses.yaml  setup.bat  system_dynamics.yaml
panopto-downloader-package/: QUICK_START.txt  README.md  config.example.yaml  example_deploying_ai.yaml  example_disciplined_entrepreneurship.yaml  requirements-dev.txt  requirements.txt  setup.ps1  setup.sh
panopto-downloader-package/src/panopto_downloader/: cli.py  config.py  downloader.py  models.py
panopto-downloader-package/tests/: __init__.py  test_config.py
panopto-downloader-package/tests/fixtures/: sample_config.yaml
scripts/: commit-msg-hook.sh  pre-commit-hook.sh
src/panopto_downloader/: __init__.py  auth.py  cli.py  downloader.py  models.py  panopto_api.py  utils.py
tests/: test_downloader.py  test_utils.py
